src/include/musicxx_extern_plugin_api.h

#define MUSICXX_EXTERN_PLUGIN_API_VERSION 1
#define MUSICXX_EXTERN_PLUGIN_ERR_TIMEOUT       -5
/* ==================== 跨边界字符串 ==================== */

/// 只读借用字符串视图 (指向调用方内存, UTF-8, 不要求 NUL 结尾)
typedef struct MusicxxExternPluginStringView {
    const char* data;
    uint64_t    size;
} MusicxxExternPluginStringView;
/// 宿主堆分配字符串 (显式所有权: 由宿主分配, 调用方用 string_free 释放)
typedef struct MusicxxExternPluginString {
    char*    data; ///< 以 \0 结尾; 空串或未设置时为 NULL
    uint64_t size; ///< 字节数 (不含结尾 \0)
} MusicxxExternPluginString;
/// 宿主句柄 (不透明; 进程内单例)
typedef struct MusicxxExternPluginHost MusicxxExternPluginHost;
/// 事件唤醒回调 (原生事件入队时调用; 必须快速返回)
typedef int32_t(MUSICXX_EXTERN_PLUGIN_CALL* MusicxxExternPluginWakeFn)(void* user_data);
/* ==================== 宿主配置 ==================== */

typedef struct MusicxxExternPluginHostConfig {
    uint32_t struct_size; ///< == sizeof(MusicxxExternPluginHostConfig)

    MusicxxExternPluginStringView app_version;       ///< 应用版本 (如 "0.87.0")
    MusicxxExternPluginStringView platform;          ///< 平台标识 (windows/linux/macos/android/ios/ohos)
    MusicxxExternPluginStringView language;          ///< 语言代码 (如 "zh-cn")
    MusicxxExternPluginStringView user_plugin_dir;   ///< 用户插件目录 (绝对路径; 可为空)
    MusicxxExternPluginStringView builtin_plugin_dir;///< 随包插件目录 (绝对路径; 可为空)
    MusicxxExternPluginStringView data_dir;          ///< 插件私有数据根目录 (绝对路径; 可为空)
    MusicxxExternPluginStringView log_dir;           ///< 日志目录 (绝对路径; 可为空)

    int32_t  log_level;          ///< 0 trace .. 4 error
    int32_t  flags;              ///< MUSICXX_EXTERN_PLUGIN_FLAG_*
    uint32_t event_queue_capacity; ///< 0 = 默认 16384
} MusicxxExternPluginHostConfig;
/* ==================== 内存 / 版本 ==================== */

/// 跨边界堆分配 (与 string_free 同一分配器)
MUSICXX_EXTERN_PLUGIN_EXPORT void* MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_malloc(uint64_t size);
/// 释放 musicxx_extern_plugin_malloc 分配的指针 (NULL 安全)
MUSICXX_EXTERN_PLUGIN_EXPORT void MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_free(const void* ptr);
/// 复制为跨边界堆字符串 (size 为字节数, 不要求 NUL 结尾)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_strdup_n(
    const MusicxxExternPluginStringView* src,
    MusicxxExternPluginString*           out
);
/// 释放宿主堆字符串 (幂等; NULL 安全)
MUSICXX_EXTERN_PLUGIN_EXPORT void MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_string_free(MusicxxExternPluginString* s);
/// C ABI 版本 (Dart 侧校验: 必须 == MUSICXX_EXTERN_PLUGIN_API_VERSION)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_api_version(void);
/// 宿主库版本字符串 (形如 "1.0.0"); 写入 out (宿主堆, 需 string_free)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_version(MusicxxExternPluginString* out);
/* ==================== 宿主生命周期 ==================== */

/// 创建宿主 (纯构造, 不起线程/不加载插件); 失败返回 NULL 并写 log
MUSICXX_EXTERN_PLUGIN_EXPORT MusicxxExternPluginHost* MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_host_create(
        const MusicxxExternPluginHostConfig* cfg,
        MusicxxExternPluginString*           log
    );
/// 启动宿主: 起宿主线程/工作线程池、注册内置提供者、按配置装载插件
/// - 就绪后入队 `musicxx.host.ready` 事件
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_host_start(
    MusicxxExternPluginHost*    h,
    MusicxxExternPluginString* log
);
/// 同步停止 (幂等); 超时返回 MUSICXX_EXTERN_PLUGIN_ERR_TIMEOUT
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_host_stop(
    MusicxxExternPluginHost*    h,
    uint32_t                    timeout_ms,
    MusicxxExternPluginString* log
);
/// 销毁宿主 (未停止会自动停止; NULL 安全)
MUSICXX_EXTERN_PLUGIN_EXPORT void MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_host_destroy(MusicxxExternPluginHost* h);
/// 热更新语言 (插件可读; 插件侧 `pluginxx.config` 表 get_language)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_set_language(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* lang,
        MusicxxExternPluginString*           log
    );
/// 热更新宿主配置 JSON (插件目录/开关/超时阈值/统计采集等)
/// - 支持字段: pluginDirs[], enableNative, enableJs, safeMode, hookBudgetMs,
///   hookHardBudgetMs, observeEvents, statsEnabled, statsPeriodMs
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_set_config(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* json,
        MusicxxExternPluginString*           log
    );
/* ==================== 事件 (原生 → Dart) ==================== */

/// 注册唤醒回调 (原生事件入队时调用; 未注册时 Dart 侧退回定时轮询)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_set_wake_callback(
        MusicxxExternPluginHost*        h,
        MusicxxExternPluginWakeFn       fn,
        void*                           user_data
    );
/// 批量取事件 (JSON 数组字符串); 无事件返回 MUSICXX_EXTERN_PLUGIN_ERR_TIMEOUT
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_poll_events(
        MusicxxExternPluginHost*    h,
        int32_t                     max_count,
        MusicxxExternPluginString* out_json,
        MusicxxExternPluginString* log
    );
/// 宿主 → 插件事件总线发布 (topic 必须 musicxx.* 或 plugin.<id>.*)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_event_publish(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* topic,
        const MusicxxExternPluginStringView* payload_json,
        MusicxxExternPluginString*           log
    );