lib/src/bindings_generated.dart

// 自动生成（ffigen）—— 请勿手改；改动请修改头文件后重新运行 ffigen。
// ignore_for_file: type=lint, unused_field, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// musicxx_extern_plugin 宿主 C ABI 绑定（自动生成）
class MusicxxExternPluginBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MusicxxExternPluginBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MusicxxExternPluginBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// 跨边界堆分配 (与 string_free 同一分配器)
  ffi.Pointer<ffi.Void> musicxx_extern_plugin_malloc(int size) {
    return _musicxx_extern_plugin_malloc(size);
  }

  late final _musicxx_extern_plugin_mallocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Uint64)>>(
        'musicxx_extern_plugin_malloc',
      );
  late final _musicxx_extern_plugin_malloc = _musicxx_extern_plugin_mallocPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  /// 释放 musicxx_extern_plugin_malloc 分配的指针 (NULL 安全)
  void musicxx_extern_plugin_free(ffi.Pointer<ffi.Void> ptr) {
    return _musicxx_extern_plugin_free(ptr);
  }

  late final _musicxx_extern_plugin_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'musicxx_extern_plugin_free',
      );
  late final _musicxx_extern_plugin_free = _musicxx_extern_plugin_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// 复制为跨边界堆字符串 (size 为字节数, 不要求 NUL 结尾)
  int musicxx_extern_plugin_strdup_n(
    ffi.Pointer<MusicxxExternPluginStringView> src,
    ffi.Pointer<MusicxxExternPluginString> out,
  ) {
    return _musicxx_extern_plugin_strdup_n(src, out);
  }

  late final _musicxx_extern_plugin_strdup_nPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_strdup_n');
  late final _musicxx_extern_plugin_strdup_n =
      _musicxx_extern_plugin_strdup_nPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 释放宿主堆字符串 (幂等; NULL 安全)
  void musicxx_extern_plugin_string_free(
    ffi.Pointer<MusicxxExternPluginString> s,
  ) {
    return _musicxx_extern_plugin_string_free(s);
  }

  late final _musicxx_extern_plugin_string_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<MusicxxExternPluginString>)
        >
      >('musicxx_extern_plugin_string_free');
  late final _musicxx_extern_plugin_string_free =
      _musicxx_extern_plugin_string_freePtr
          .asFunction<void Function(ffi.Pointer<MusicxxExternPluginString>)>();

  /// C ABI 版本 (Dart 侧校验: 必须 == MUSICXX_EXTERN_PLUGIN_API_VERSION)
  int musicxx_extern_plugin_api_version() {
    return _musicxx_extern_plugin_api_version();
  }

  late final _musicxx_extern_plugin_api_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'musicxx_extern_plugin_api_version',
      );
  late final _musicxx_extern_plugin_api_version =
      _musicxx_extern_plugin_api_versionPtr.asFunction<int Function()>();

  /// 宿主库版本字符串 (形如 "1.0.0"); 写入 out (宿主堆, 需 string_free)
  int musicxx_extern_plugin_version(
    ffi.Pointer<MusicxxExternPluginString> out,
  ) {
    return _musicxx_extern_plugin_version(out);
  }

  late final _musicxx_extern_plugin_versionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<MusicxxExternPluginString>)
        >
      >('musicxx_extern_plugin_version');
  late final _musicxx_extern_plugin_version = _musicxx_extern_plugin_versionPtr
      .asFunction<int Function(ffi.Pointer<MusicxxExternPluginString>)>();

  /// 创建宿主 (纯构造, 不起线程/不加载插件); 失败返回 NULL 并写 log
  ffi.Pointer<MusicxxExternPluginHost> musicxx_extern_plugin_host_create(
    ffi.Pointer<MusicxxExternPluginHostConfig> cfg,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_host_create(cfg, log);
  }

  late final _musicxx_extern_plugin_host_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MusicxxExternPluginHost> Function(
            ffi.Pointer<MusicxxExternPluginHostConfig>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_host_create');
  late final _musicxx_extern_plugin_host_create =
      _musicxx_extern_plugin_host_createPtr
          .asFunction<
            ffi.Pointer<MusicxxExternPluginHost> Function(
              ffi.Pointer<MusicxxExternPluginHostConfig>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 启动宿主: 起宿主线程/工作线程池、注册内置提供者、按配置装载插件
  /// - 就绪后入队 `musicxx.host.ready` 事件
  int musicxx_extern_plugin_host_start(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_host_start(h, log);
  }

  late final _musicxx_extern_plugin_host_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_host_start');
  late final _musicxx_extern_plugin_host_start =
      _musicxx_extern_plugin_host_startPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 同步停止 (幂等); 超时返回 MUSICXX_EXTERN_PLUGIN_ERR_TIMEOUT
  int musicxx_extern_plugin_host_stop(
    ffi.Pointer<MusicxxExternPluginHost> h,
    int timeout_ms,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_host_stop(h, timeout_ms, log);
  }

  late final _musicxx_extern_plugin_host_stopPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Uint32,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_host_stop');
  late final _musicxx_extern_plugin_host_stop =
      _musicxx_extern_plugin_host_stopPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              int,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 销毁宿主 (未停止会自动停止; NULL 安全)
  void musicxx_extern_plugin_host_destroy(
    ffi.Pointer<MusicxxExternPluginHost> h,
  ) {
    return _musicxx_extern_plugin_host_destroy(h);
  }

  late final _musicxx_extern_plugin_host_destroyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<MusicxxExternPluginHost>)
        >
      >('musicxx_extern_plugin_host_destroy');
  late final _musicxx_extern_plugin_host_destroy =
      _musicxx_extern_plugin_host_destroyPtr
          .asFunction<void Function(ffi.Pointer<MusicxxExternPluginHost>)>();

  /// 热更新语言 (插件可读; 插件侧 `pluginxx.config` 表 get_language)
  int musicxx_extern_plugin_set_language(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> lang,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_set_language(h, lang, log);
  }

  late final _musicxx_extern_plugin_set_languagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_set_language');
  late final _musicxx_extern_plugin_set_language =
      _musicxx_extern_plugin_set_languagePtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 热更新宿主配置 JSON (插件目录/开关/超时阈值/统计采集等)
  /// - 支持字段: pluginDirs[], enableNative, enableJs, safeMode, hookBudgetMs,
  /// hookHardBudgetMs, observeEvents, statsEnabled, statsPeriodMs
  int musicxx_extern_plugin_set_config(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_set_config(h, json, log);
  }

  late final _musicxx_extern_plugin_set_configPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_set_config');
  late final _musicxx_extern_plugin_set_config =
      _musicxx_extern_plugin_set_configPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 注册唤醒回调 (原生事件入队时调用; 未注册时 Dart 侧退回定时轮询)
  int musicxx_extern_plugin_set_wake_callback(
    ffi.Pointer<MusicxxExternPluginHost> h,
    MusicxxExternPluginWakeFn fn,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _musicxx_extern_plugin_set_wake_callback(h, fn, user_data);
  }

  late final _musicxx_extern_plugin_set_wake_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            MusicxxExternPluginWakeFn,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('musicxx_extern_plugin_set_wake_callback');
  late final _musicxx_extern_plugin_set_wake_callback =
      _musicxx_extern_plugin_set_wake_callbackPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              MusicxxExternPluginWakeFn,
              ffi.Pointer<ffi.Void>,
            )
          >();

  /// 批量取事件 (JSON 数组字符串); 无事件返回 MUSICXX_EXTERN_PLUGIN_ERR_TIMEOUT
  int musicxx_extern_plugin_poll_events(
    ffi.Pointer<MusicxxExternPluginHost> h,
    int max_count,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_poll_events(h, max_count, out_json, log);
  }

  late final _musicxx_extern_plugin_poll_eventsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Int32,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_poll_events');
  late final _musicxx_extern_plugin_poll_events =
      _musicxx_extern_plugin_poll_eventsPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              int,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 宿主 → 插件事件总线发布 (topic 必须 musicxx.* 或 plugin.<id>.*)
  int musicxx_extern_plugin_event_publish(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> topic,
    ffi.Pointer<MusicxxExternPluginStringView> payload_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_event_publish(h, topic, payload_json, log);
  }
